<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/TextViewCalories"
        android:layout_width="126dp"
        android:layout_height="47dp"
        android:layout_marginBottom="555dp"
        android:text="@string/calories"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/TextViewSteps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/_0"
        app:layout_constraintStart_toStartOf="@+id/steps"
        app:layout_constraintTop_toBottomOf="@+id/steps" />

    <TextView
        android:id="@+id/steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="72dp"
        android:text="@string/steps"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TextViewGoalCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/_0_goalCalories"
        app:layout_constraintStart_toStartOf="@+id/goalCalories"
        app:layout_constraintTop_toBottomOf="@+id/goalCalories" />

    <TextView
        android:id="@+id/goalCalories"
        android:layout_width="105dp"
        android:layout_height="24dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="16dp"
        android:text="@string/goal_calories"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ButtonViewDiary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="477dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/view_diary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/TextViewCalories" />

    <ProgressBar
        android:id="@+id/progressBarCalories"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="16dp"
        android:max="100"
        android:progress="60"
        app:layout_constraintBottom_toTopOf="@+id/goalCalories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewUserDetail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewUserDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/welcome_back_user"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ButtonViewDiary" />

    <EditText
        android:id="@+id/editTextServings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/serving"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/tvFoodServing"
        app:layout_constraintTop_toBottomOf="@+id/tvFoodServing" />

    <EditText
        android:id="@+id/editTextCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/calories"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/tvProtien"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextProtein"
        android:layout_width="223dp"
        android:layout_height="49dp"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="77dp"
        android:ems="10"
        android:hint="@string/protien"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvFoodName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="2dp"
        android:text="@string/food_name"
        app:layout_constraintBottom_toTopOf="@+id/editTextFoodName"
        app:layout_constraintStart_toStartOf="@+id/editTextFoodName" />

    <TextView
        android:id="@+id/tvFoodServing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="14dp"
        android:text="@string/servings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFoodName" />

    <TextView
        android:id="@+id/tvCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/calories_etCalories"
        app:layout_constraintBottom_toTopOf="@+id/editTextCalories"
        app:layout_constraintStart_toStartOf="@+id/editTextCalories" />

    <TextView
        android:id="@+id/tvProtien"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/protien"
        app:layout_constraintBottom_toTopOf="@+id/editTextProtein"
        app:layout_constraintStart_toStartOf="@+id/editTextProtein" />

    <EditText
        android:id="@+id/editTextFoodName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="108dp"
        android:layout_marginBottom="104dp"
        android:ems="10"
        android:hint="@string/apple"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/tvCalories"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewUserDetails" />

    <Button
        android:id="@+id/buttonAddFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/add_food"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/log_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonAddFood" />

    <TextView
        android:id="@+id/textViewUserDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="35dp"
        app:layout_constraintEnd_toStartOf="@+id/progressBarCalories"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/newMeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/next_meal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!--custom progress drawable for progress mode-->

</androidx.constraintlayout.widget.ConstraintLayout>