<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginRight="10dp"
        android:layout_centerVertical="true"
        android:id="@+id/imageView"
        android:src="@mipmap/breakfast"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mealName"
        android:layout_toEndOf="@id/imageView"
        android:text="@string/meal_name"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/CaloriesItemView"
        android:layout_toEndOf="@id/imageView"
        android:layout_below="@id/mealName"
        android:text="@string/calories_itemView"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ProteinItemView"
        android:layout_toEndOf="@id/imageView"
        android:layout_below="@id/CaloriesItemView"
        android:text="@string/protein_itemView"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/ProteinItemView"
        android:background="@color/black"
        android:layout_marginTop="10dp"/>
</RelativeLayout>